# majestic-lisp

./: .dir-locals.el  .gitignore  00-agradecimentos.html  00-agradecimentos.org  01-01-o-que-e-lisp.html  01-01-o-que-e-lisp.org  01-02-majestic-lisp.html  01-02-majestic-lisp.org  01-03-sobre-programacao-instruida.html  01-03-sobre-programacao-instruida.org  01-04-como-ler-este-documento.html  01-04-como-ler-este-documento.org  01-introducao.html  01-introducao.org  02-01-expressoes-primitivas.html  02-01-expressoes-primitivas.org  02-02-listas.html  02-02-listas.org  02-03-escrevendo-programas.html  02-03-escrevendo-programas.org  02-04-elementos-avancados.org  02-05-exemplos.html  02-05-exemplos.org  02-sintaxe.html  02-sintaxe.org  03-configuracao.html  03-configuracao.org  04-01-estado-global.html  04-01-estado-global.org  04-02-tipos-de-dados-fundamentais.html  04-02-tipos-de-dados-fundamentais.org  04-03-contextos.html  04-03-contextos.org  04-nucleo.html  04-nucleo.org  05-01-simbolos-constantes.html  05-01-simbolos-constantes.org  05-02-predicados.org  05-03-funcoes-primitivas.html  05-03-funcoes-primitivas.org  (+46 more)
.github/workflows/: deploy.yml  docs.yml
doc/: book.toml
doc/html/: 00-agradecimentos.html  01-01-o-que-e-lisp.html  01-02-majestic-lisp.html  01-introducao.html  (+28 more)
examples/: basic.maj  bootstrap.maj  church.maj  cps.maj  dynamic-scope.maj  helper.maj  lazy.maj  lightweight-table-alt.maj  lightweight-table.maj  metacircular.maj  prolog.maj  unicode.maj  word-equation-scheme.maj
src/: main.rs  tests.rs
static/: dark-theme.css  main.css  setupfile.org
(+24 files in other folders)
