[package]
name        = "majestic-lisp"
version     = "0.4.3"
authors     = ["Lucas S. Vieira <lucasvieira@protonmail.com>"]
description = "Lisp dialect built with Rust as a literate program"
license     = "MIT"
keywords    = ["lisp", "language", "dialect", "interpreter"]
readme      = "README.org"
edition     = "2018"
build       = "build.rs"

[features]
dumb_terminal = ["colored/no-color"]

[build-dependencies]
chrono = "0.4.19"

[dev-dependencies]
regex = "1.4.2"

[dependencies]
gc               = { version = "0.4.0", features = ["derive"] }
rand             = { version = "0.7" }
colored          = "2.0"
rustyline        = "6.3.0"
rustyline-derive = "0.3.1"
float-cmp        = "0.8.0"
rustf8           = "0.9.1"
num-derive       = "0.3.3"
num-traits       = "0.2.14"
stacker          = "0.1"
bimap            = "0.6.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
comfy-table      = "1.4.2"
